@@ -1,20 +1,29 @@
 --- #YAML:1.0
-name:                YAML-DBH
-version:             1.07
-abstract:            ~
-license:             ~
-author:              ~
-generated_by:        ExtUtils::MakeMaker version 6.44
-distribution_type:   module
-requires:     
-    Carp:                          1
-    Cwd:                           3
-    DBD::mysql:                    4.008
-    DBD::SQLite:                   1.14
-    DBI:                           1.607
-    Exporter:                      5
-    Test::Simple:                  0
-    YAML:                          0.66
+name:               YAML-DBH
+version:            1.08
+abstract:           instant database connection from config file on disk
+author:
+    - Leo Charre leocharre at cpan dot org
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Carp:          1
+    Cwd:           3
+    DBD::mysql:    4.008
+    DBD::SQLite:   1.14
+    DBI:           1.607
+    Exporter:      5
+    Test::Simple:  0
+    YAML:          0.66
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.50
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
