@@ -1,9 +1,9 @@
 use ExtUtils::MakeMaker;
 
 WriteMakefile(
-   NAME => 'YAML::DBH',
-   VERSION_FROM => 'lib/YAML/DBH.pm',
-
+   NAME           => 'YAML::DBH',
+   VERSION_FROM   => 'lib/YAML/DBH.pm',
+   ABSTRACT_FROM  => 'lib/YAML/DBH.pm',
 
    # gen /usr/bin/pmused by Mon Dec  1 17:04:41 EST 2008 
    PREREQ_PM => {
@@ -16,9 +16,9 @@ WriteMakefile(
       'Test::Simple'                      => '0',
       'YAML'                              => '0.66',
    },
+   LICENSE        => 'perl',
+   AUTHOR         => 'Leo Charre leocharre at cpan dot org',
 
-
-   EXE_FILES => [],
 );
 
 
